ending the html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
   <title>Local Turistico</title>
 </head>
 <body>
+
+  <h1>Conheça o Brasil</h1>     <!-- Conheca tal lugar -->
+  <img src="./assets/cristo-redentor.jpg" alt="Local Turistico">
+  <p>Descricao sobre a foto acima (vulgo cristo redentor)</p>
+
+
+  <h2>Conheca os melhores lugares turisticos do Brasil</h2>   <!-- Destinos imperdiveis em lugar x -->
+  <p>O Brasil é um país de uma riqueza incomparável, com destinos turísticos que encantam por sua diversidade e beleza. Imagine começar pelo Rio de Janeiro, com suas paisagens icônicas, como o Cristo Redentor e as praias mundialmente famosas de Copacabana e Ipanema. É uma cidade vibrante, que mistura natureza exuberante com o agito urbano.</p>
   
+
+  <img src="./assets/porto-de-galinhas.png" alt="Porto de Galinhas">
+  <h3>1 - Porto de Galinhas</h3>   <!-- 1. Destino 1 -->
+  <p>Porto de Galinhas, localizado no município de Ipojuca, em Pernambuco, é um dos destinos turísticos mais famosos do Brasil. Conhecido por suas praias paradisíacas, piscinas naturais e atmosfera acolhedora, o lugar atrai visitantes de todas as partes do mundo.</p>
+  <ul>Bom para:
+    <li>Casais</li>
+    <li>Familia</li>
+  </ul>
+  
+
+  <img src="./assets/thermas1.jpg" alt="Thermas dos Laranjais">
+  <h3>2 - Thermas dos Laranjais</h3>   <!-- 2. Destino 2 -->
+  <p>Thermas dos Laranjais é um dos maiores e mais visitados parques aquáticos da América Latina, localizado na cidade de Olímpia, no interior de São Paulo. Este destino atrai milhões de turistas anualmente graças à sua estrutura impressionante, águas termais e atrações para todas as idades.</p>
+  <ul> Bom para:
+    <li>Familia</li>
+    <li>Diversão</li>
+  </ul>
+  
+
+  <img src="./assets/paraty.png" alt="Paraty">
+  <h3>3 - Paraty</h3>   <!-- 3. Destino 3 -->
+  <p>Paraty, localizada no litoral sul do Rio de Janeiro, é uma das cidades mais encantadoras e históricas do Brasil. Com suas ruas de pedra, arquitetura colonial preservada e paisagens naturais deslumbrantes, o destino oferece uma combinação perfeita de cultura, história e ecoturismo.</p>
+  <ul> Bom para:
+    <li>Familia</li>
+    <li>Historia</li>
+  </ul>
+  
+
 </body>
 </html>
