changing the style

--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Local Turistico</title>
 </head>
 <body>
 
-  <h1>Conheça o Brasil</h1>     <!-- Conheca tal lugar -->
-  <img src="./assets/cristo-redentor.jpg" alt="Local Turistico">
-  <p>Descricao sobre a foto acima (vulgo cristo redentor)</p>
+    <h1>Conheça o Brasil</h1>     <!-- Conheca tal lugar -->
+    <img src="./assets/cristo-redentor.jpg" alt="Local Turistico" class="main-image">
+    <p id="main">O Brasil é um dos destinos turísticos mais vibrantes e diversificados do mundo, famoso por sua rica cultura, belezas naturais e hospitalidade calorosa. Como o maior país da América do Sul, oferece uma impressionante variedade de experiências que encantam viajantes de todos os perfis.</p>
 
 
-  <h2>Conheca os melhores lugares turisticos do Brasil</h2>   <!-- Destinos imperdiveis em lugar x -->
-  <p>O Brasil é um país de uma riqueza incomparável, com destinos turísticos que encantam por sua diversidade e beleza. Imagine começar pelo Rio de Janeiro, com suas paisagens icônicas, como o Cristo Redentor e as praias mundialmente famosas de Copacabana e Ipanema. É uma cidade vibrante, que mistura natureza exuberante com o agito urbano.</p>
-  
+  <hr>   <!-- Linha divisoria -->
+
+  <div class="h2">
+    <h2>Conheca os melhores lugares turisticos do Brasil</h2>   <!-- Destinos imperdiveis em lugar x -->
+    
+      <p>O Brasil é um país de uma riqueza incomparável, com destinos turísticos que encantam por sua diversidade e beleza. Imagine começar pelo Rio de Janeiro, com suas paisagens icônicas, como o Cristo Redentor e as praias mundialmente famosas de Copacabana e Ipanema. É uma cidade vibrante, que 
+      mistura natureza exuberante com o agito urbano.</p>
+    
+  </div>
+
 
   <img src="./assets/porto-de-galinhas.png" alt="Porto de Galinhas">
   <h3>1 - Porto de Galinhas</h3>   <!-- 1. Destino 1 -->
