--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="en">
 <head>
 
+  <link rel="shortcut icon" href="./assets/icone.ico" type="image/x-icon">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel\"stylesheet" href="./style.css">
   <title>Local Turistico</title>
 </head>
 <body>
 
     <h1>Conheça o Brasil</h1>     <!-- Conheca tal lugar -->
-    <img src="./assets/cristo-redentor.jpg" alt="Local Turistico" class="main-image">
-    <p id="main">O Brasil é um dos destinos turísticos mais vibrantes e diversificados do mundo, famoso por sua rica cultura, belezas naturais e hospitalidade calorosa. Como o maior país da América do Sul, oferece uma impressionante variedade de experiências que encantam viajantes de todos os perfis.</p>
+    <img src="./assets/cristo-redentor.jpg" alt="Local Turistico" class="firstImage">
+    <p id="brasil">O Brasil é um dos destinos turísticos mais vibrantes e diversificados do mundo, famoso por sua rica cultura, belezas naturais e hospitalidade calorosa. Como o maior país da América do Sul, oferece uma impressionante variedade de experiências que encantam viajantes de todos os perfis.</p>
 
 
   <hr>   <!-- Linha divisoria -->
@@ -32,6 +35,7 @@
   <img src="./assets/porto-de-galinhas.png" alt="Porto de Galinhas">
   <h3>1 - Porto de Galinhas</h3>   <!-- 1. Destino 1 -->
   <p>Porto de Galinhas, localizado no município de Ipojuca, em Pernambuco, é um dos destinos turísticos mais famosos do Brasil. Conhecido por suas praias paradisíacas, piscinas naturais e atmosfera acolhedora, o lugar atrai visitantes de todas as partes do mundo.</p>
+  
   <ul>Bom para:
     <li>Casais</li>
     <li>Familia</li>
@@ -55,6 +59,9 @@
     <li>Historia</li>
   </ul>
   
+  <p id="cuidado">As melhores coisas para fazer no Brasil destacam a reputação do país como um dos destinos mais diversos e vibrantes do mundo. Frequentemente visto como o coração da América do Sul, o Brasil oferece uma atmosfera única graças à sua mistura de culturas, paisagens exuberantes e uma energia contagiante. Com cidades cosmopolitas, como São Paulo e Rio de Janeiro, e riquezas naturais que vão da Floresta Amazônica às praias paradisíacas do Nordeste, o país atrai visitantes de todos os cantos do mundo, proporcionando experiências memoráveis para todos os gostos.</p>
+
+
 
 </body>
 </html>
